165 Fix an issue leading to horizontal scrollbars

--- a/www/styles/docs.scss
+++ b/www/styles/docs.scss
@@ -91,7 +91,9 @@
 
     ~ a {
       padding-inline: 0.5em !important;
-      transform: translateX(0.5em); // the background is not visible unless hovered. Meaning, it looks misaligned unless hovered. This offsets it.
+      @media (min-width: 1040px) {
+        transform: translateX(0.5em); // the background is not visible unless hovered. Meaning, it looks misaligned unless hovered. This offsets it.
+      }
     }
   }
 
